# orderbook

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
grpc/: Cargo.toml  build.rs
grpc/src/: lib.proto  lib.rs
srv/: Cargo.toml
srv/src/: aggregator.rs  exchanges.rs  main.rs  service.rs
