[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = { path = "../grpc" }
tokio = { version = "1.32.0", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls"] }
