[package]
name = "srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
bitstamp_client_ws = "0.2.0"
bytes = { version = "1.4.0", features = ["std"] }
clap = { version = "4.3.21", features = ["derive"] }
futures = "0.3.28"
grpc = { path = "../grpc" }
http = "0.2.9"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-websockets = { version = "0.3.3", features = ["client", "fastrand", "simd", "rustls-webpki-roots"] }
tonic = { version = "0.9.2", features = ["tls"] }
